--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,13 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-modId=bpo
-modVersion=0.1.0
 minecraft=1.16.5
+MCVR=[1.16.5,1.17)
+
+ForgeVR=[36,)
+
+modId=bpo
+modName=Block Physics Overhaul
+modVersion=0.1.0
+
+buildNum=1
