--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,7 @@ minecraft {
 			workingDirectory project.file('run')
 			arg "--mixin"
 			arg "mixins." + project.modId + ".json"
-			arg "--username=Dev"
+			arg "--username=Sasai_Kudasai_BM"
 			jvmArgs "-Xmx3G"
 			jvmArgs "-XX:+UseConcMarkSweepGC"
 			property "mixin.debug.export", "true"
@@ -60,7 +60,7 @@ minecraft {
 		server {
 			workingDirectory project.file('run')
 			arg '--mixin mixins.' + project.modId + '.json'
-			arg "--username=Dev"
+			arg "--username=Sasai_Kudasai_BM"
 			jvmArgs "-Xmx3G"
 			jvmArgs "-XX:+UseConcMarkSweepGC"
 			property "mixin.env.disableRefMap", "true"
