--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.+', changing: true
+		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.+', changing: true
 		classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
 	}
 }
@@ -83,8 +83,8 @@ configurations {
 
 dependencies {
 	minecraft 'net.minecraftforge:forge:1.16.5-36.0.14'
-	embed('org.spongepowered:mixin:0.8.3') { transitive = false }
-	annotationProcessor 'org.spongepowered:mixin:0.8.3:processor'
+	embed('org.spongepowered:mixin:0.8.4') { transitive = false }
+	annotationProcessor 'org.spongepowered:mixin:0.8.4:processor'
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
@@ -147,6 +147,7 @@ project.tasks.withType(Jar) { jarTask ->
 }
 
 processResources {
+	duplicatesStrategy 'include'
 	finalizedBy replaceResources
 }
 
